# SHAP-Projects

./: README.md  main.py  pyproject.toml
SHAP Classification Case Study/: classification_shap.ipynb
SHAP Introduction/: shap_background_data.ipynb  shap_intro.ipynb
SHAP Pytorch ANN/: ann_shap.ipynb
SHAP Regression Case Study/: regression_shap.ipynb
SHAP TensorFlow ANN/: cnn_shap_MNIST.ipynb
