[project]
name = "shap-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "optuna>=4.7.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "xgboost>=3.1.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
