[project]
name = "shap-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "feature-engine>=1.9.3",
    "kagglehub>=0.4.2",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "optuna>=4.7.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "tensorflow>=2.20.0",
    "torch>=2.10.0",
    "xgboost>=3.1.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
